# adventofcode

./: .envrc  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  flake.nix  justfile
2019/01/: solution.cpp
2022/01/: solution.cpp
2022/02/: solution.cpp
2022/03/: solution.cpp
2022/20/: solution.cpp
2023/01/: solution.cpp
adventofcode2020/: 1.cpp  2.cpp  3.cpp  CMakeLists.txt
runner/: aliases.h  aoc_problem_registry.h  download.sh  main.cpp  new.sh  problem_list.txt  submit.sh
scripts/: download.sh  download_input.sh  download_test.sh  new.sh  open.sh  start.sh  submit.sh
src/: problem_list.txt
src/2019/: 01.cpp
src/2020/: 05.cpp  06.cpp  07.cpp
src/2022/: 01.cpp  02.cpp  03.cpp  20.cpp
src/2023/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
src/2024/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  11.cpp  12.cpp  13.cpp  14.cpp  15.cpp  16.cpp  17.cpp  18.cpp  19.cpp  20.cpp  21.cpp  22.cpp  23.cpp  24.cpp  25.cpp
src/runner/: aliases.h  aoc_problem_registry.h  helpful_includes.h  main.cpp
